--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ body {
     font-family: Inter;
     margin: 0;
     display: flex;
+    background-color: #FAFAFA;
 }
 
 .img-banner {
@@ -53,12 +54,115 @@ body {
     height: 100%;
 }
 
-.signup-form {
-    padding: 150px 50px;
+
+.heading {
+    padding: 150px 200px 0 50px;
+    padding-bottom: 75px;
 }
 
 
 .header {
     font-weight: bold;
-    font-size: 24px;
+    font-size: 20px;
+}
+
+p {
+    margin-bottom: 0;
+}
+
+form {
+    padding: 15px 0;
+    
+}
+
+form > .header {
+    color: #191e28;
+    padding-left: 50px;
+    background-color: white;
+    padding-top: 15px;
+}
+
+.form-inputs {
+    padding-top: 15px;
+    padding-right: 300px;
+    padding-left: 50px;
+    padding-bottom: 15px;
+    display: flex;
+    flex: auto;
+    flex-wrap: wrap;
+    gap: 32px;
+    box-shadow: 0px 3px 5px rgba(0,0,0,0.2);
+    background-color: white;
+    position: relative;
+}
+
+.form-control {
+    display: flex;
+    flex: auto;
+    flex-direction: column;
+    width: 40%;
+}
+
+input {
+    border: 1px solid #E5E7EB;
+    border-radius: 5px;
+    height: 25px;
+}
+
+.submit {
+    background-color: #FAFAFA;
+    padding-left: 50px;
+}
+
+.submit > button {
+    font-family: inherit;
+    font-size: 16px;
+    font-weight: bold;
+    border: 0;
+    border-radius: 10px;
+    margin-top: 50px;
+    height: 50px;
+    width: 250px;
+    background-color: #596D48;
+    color: white;
+}
+.log-in {
+    padding-left: 50px;
+    margin-top: 20px;
+}
+
+.log-in > a {
+    color: #596D48;
+    text-decoration: none;
+}
+
+label {
+    color: #191e28;
+    font-size: 12px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    padding-bottom: 5px;
+}
+
+input[type="password"]:invalid {
+    border: 1px solid red;
+}
+
+.message {
+    color: red;
+    font-size: 12px;
+}
+
+input[type="password"] + .message {
+    visibility: hidden;
+}
+
+input[type="password"]:invalid + .message {
+    visibility: visible;
+}
+
+input:focus {
+    outline-width: 0;
+    border: 1px solid #0000ff;
+    box-shadow: 0px 0px 2px black;
 }
